[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256

# Faster compile times
[profile.dev.build-override]
opt-level = 3
incremental = false
codegen-units = 1
